style: fix overflow card for small devices with max-height of parent

--- a/client/src/app/restaurant-list-small-devices/restaurant-list-small-devices.component.scss
+++ b/client/src/app/restaurant-list-small-devices/restaurant-list-small-devices.component.scss
@@ -38,3 +38,7 @@
   background-color: white;
   padding: 0.5%;
 }
+
+.row {
+  // background-color: black;
+}
